Fix mobile slider heading alignment

--- a/assets/global.css
+++ b/assets/global.css
@@ -585,7 +585,8 @@ a {
     }
 
     .bb-circle-slider .bb-slider-content h2,
-    .bb-circle-slider .bb-slider-content>p {
+    .bb-circle-slider .bb-slider-content > p,
+    .bb-circle-slider .bb-slider-content .bb-slider-context>div h3 {
         text-align: center;
     }
 
